k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coweave-website
  namespace: coweave-website
  labels:
    app: coweave-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: coweave-website
